--- a/index.html
+++ b/index.html
@@ -29,18 +29,13 @@
     </div>
 </div>
 <div id="newsTicker" class="news-ticker-container" style="display:none;">
-    <strong class="news-ticker-fixed-label">NOTICIAS</strong>
-    <div class="news-ticker-wrap">
-        <div id="newsTickerContent" class="news-ticker-content">
-            </div>
+    <strong class="news-ticker-label">NEWS:</strong>
+    <div class="news-ticker-content">
+        <span id="newsText"></span>
     </div>
 </div>
 
 <div class="login-controls">
-  <div id="statusMessage" class="login-message">
-    Accede como admin para editar
-  </div>
-  
   <div id="loginForm">
     <input id="user" placeholder="Usuario" aria-label="Usuario">
     <input id="pass" type="password" placeholder="Contraseña" aria-label="Contraseña">
@@ -75,10 +70,10 @@
 </section>
 
 <footer>
-  <div>© 2025 Consulado – Información actualizada periódicamente.</div>
+    <p>⭐ App diseñada y desarrollada por @el_cubanito_freelance ⭐</p>
+    <p>Esta es una herramienta de la comunidad, no oficial del Consulado.</p>
 </footer>
 
 <script type="module" src="script.js"></script>
-
 </body>
 </html>
