--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
 
 <div class="login-controls">
   <div id="statusMessage" class="login-message">
+    ⚠️** LA INFORMACIÓN ES APORTADA POR VOLUNTARIOS **⚠️
+    
     Accede como admin para editar
   </div>
   
