--- a/index.html
+++ b/index.html
@@ -38,9 +38,7 @@
 
 <div class="login-controls">
   <div id="statusMessage" class="login-message">
-    ⚠️** LA INFORMACIÓN ES APORTADA POR VOLUNTARIOS **⚠️
-    
-    Accede como admin para editar
+            Accede como admin para editar la Información
   </div>
   
   <div id="loginForm">
