--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 <div class="login-controls">
   <div id="statusMessage" class="login-message">
-            Accede como admin para editar la Información
+            Accede como editor para actualizar la información
   </div>
   
   <div id="loginForm">
