--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
   
   <div id="adminControlsPanel">
     <button id="saveBtn">💾 Guardar Cambios</button>
-    <button id="addNewsBtn" class="admin-btn">📰 Añadir Noticia</button> 
-    <button id="deleteNewsBtn" class="admin-btn">❌ Eliminar Noticia</button> 
-    <button id="logoutBtn"> ❌Cerrar Modo Edicion❌</button>
+    <button id="addNewsBtn" class="admin-btn">✅️ Añadir una Noticia</button> 
+    <button id="deleteNewsBtn" class="admin-btn">❌ Eliminar una Noticia</button> 
+    <button id="logoutBtn"> ❌Salir del Modo Edicion❌</button>
   </div>
 </div>
 
