--- a/index.html
+++ b/index.html
@@ -29,22 +29,25 @@
     </div>
 </div>
 <div id="newsTicker" class="news-ticker-container" style="display:none;">
-    <strong class="news-title">📢 Últimas Noticias:</strong> 
-    <span class="news-content" id="newsContent"></span>
+    <strong class="news-ticker-fixed-label">NOTICIAS</strong>
+    <div class="news-ticker-wrap">
+        <div id="newsTickerContent" class="news-ticker-content">
+            </div>
+    </div>
 </div>
 
-<div class="controls-wrapper">
-  <p class="status-message" id="statusMessage">Activar Edición para modificar contenidos</p>
+<div class="login-controls">
+  <p id="statusMessage" class="login-message">Pulsa el botón para activar el modo de edición.</p>
   
-  <div id="controlsContainer">
-    <button id="toggleEditModeBtn" class="admin-btn">🛡️ ACTIVAR MODO EDICIÓN</button>
-    
-    <div id="adminControlsPanel" style="display: none;">
-      <button id="saveBtn" class="admin-btn">💾 Guardar Cambios</button>
-      <button id="addNewsBtn" class="admin-btn">✅ Añadir Noticia</button> 
-      <button id="deleteNewsBtn" class="admin-btn">❌ Eliminar Noticia</button> 
-      <button id="logoutBtn" class="admin-btn">🛑 Desactivar Edición</button>
-    </div>
+  <div id="publicEditAccess">
+    <button id="enableEditBtn" class="login-btn">🔐 ACTIVAR MODO EDICION</button>
+  </div>
+  
+  <div id="adminControlsPanel">
+    <button id="saveBtn">💾 Guardar Cambios</button>
+    <button id="addNewsBtn">✅️ Añadir una Noticia</button> 
+    <button id="deleteNewsBtn">❌ Eliminar una Noticia</button> 
+    <button id="logoutBtn"> ❌Salir del Modo Edicion❌</button>
   </div>
 </div>
 
@@ -68,8 +71,7 @@
 </section>
 
 <footer>
-  <p>© 2024 La Habana - Consulado y Trámites. Fuente no oficial, sólo informativa.</p>
-  <p>Desarrollado y mantenido por usuarios.</p>
+    <p>© 2024 - Todos los datos son orientativos. <a href="https://ejemplo.com/aviso-legal" target="_blank">Aviso Legal</a></p>
 </footer>
 
 <script type="module" src="script.js"></script>
