--- a/index.html
+++ b/index.html
@@ -37,18 +37,22 @@
 </div>
 
 <div class="login-controls">
-  <p id="statusMessage" class="login-message">Pulsa el botón para activar el modo de edición.</p>
-  
-  <div id="publicEditAccess">
-    <button id="enableEditBtn" class="login-btn">🔐 ACTIVAR MODO EDICION</button>
+  <div id="statusMessage" class="login-message">
+            Accede a modo edición para actualizar la información
   </div>
+  
+  <button id="toggleAdminBtn" class="primary-admin-btn">🔑 Acceder a Modo Edición</button>
+
   
   <div id="adminControlsPanel">
-    <button id="saveBtn">💾 Guardar Cambios</button>
-    <button id="addNewsBtn">✅️ Añadir una Noticia</button> 
-    <button id="deleteNewsBtn">❌ Eliminar una Noticia</button> 
-    <button id="logoutBtn"> ❌Salir del Modo Edicion❌</button>
-  </div>
+    <div class="admin-group">
+        <button id="saveBtn" class="admin-btn">💾 Guardar Cambios (Trámites y Estado)</button>
+    </div>
+    <div class="admin-group">
+        <button id="addNewsBtn" class="admin-btn">✅️ Añadir una Noticia</button> 
+        <button id="deleteNewsBtn" class="admin-btn">❌ Eliminar una Noticia</button> 
+    </div>
+    </div>
 </div>
 
 <div class="container" id="contenedor">
@@ -71,9 +75,10 @@
 </section>
 
 <footer>
-    <p>© 2024 - Todos los datos son orientativos. <a href="https://ejemplo.com/aviso-legal" target="_blank">Aviso Legal</a></p>
+  <div>© 2025 Consulado – Información actualizada periódicamente.</div>
 </footer>
 
 <script type="module" src="script.js"></script>
+
 </body>
 </html>
