--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <div id="statusPanel" class="status-panel-container">
     <div class="status-panel-header">
-        <span>ESTADO ECONÓMICO Y ENERGÉTICO CUBANO 🚨</span>
+        <span>ESTADO ECONÓMICO Y ENERGÉTICO 🚨</span>
         <span id="lastEditedTime">Última edición: Hace un rato...</span>
     </div>
     <div id="statusDataContainer" class="status-panel-data">
@@ -41,16 +41,16 @@
             Accede a modo edición para actualizar la información
   </div>
   
-  <button id="toggleAdminBtn" class="primary-admin-btn">🔑 Acceder a Modo Edición</button>
+  <button id="toggleAdminBtn" class="primary-admin-btn">🛡️ ACTIVAR EL MODO EDICIÓN </button>
 
   
   <div id="adminControlsPanel">
     <div class="admin-group">
-        <button id="saveBtn" class="admin-btn">💾 Guardar Cambios (Trámites y Estado)</button>
+        <button id="saveBtn" class="admin-btn">💾 Guardar los Cambios</button>
     </div>
     <div class="admin-group">
         <button id="addNewsBtn" class="admin-btn">✅️ Añadir una Noticia</button> 
-        <button id="deleteNewsBtn" class="admin-btn">❌ Eliminar una Noticia</button> 
+        <button id="deleteNewsBtn" class="admin-btn">⛔️ Eliminar una Noticia</button> 
     </div>
     </div>
 </div>
@@ -59,7 +59,7 @@
   </div>
 
 <section class="comments-section">
-    <h2>🗣️ Comentarios de la Comunidad (Hilos y Votos)</h2>
+    <h2>🗣️ Comentarios de la Comunidad</h2>
     
     <div class="comments-display-wrap">
         <div id="commentsContainer" class="comments-list-container">
