--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
 <header>
   <h1>🇪🇸 Calendario de Trámites Consulares 🇨🇺</h1>
   <p>Información de plazos y fechas aproximadas al <span id="fecha-actualizacion">Cargando...</span></p>
-</header>
+  <div class="header-action-container">
+      <a href="news.html" class="news-btn" role="button">📰 NOTICIAS DESTACADAS</a>
+  </div>
+  </header>
 
 <div id="statusPanel" class="status-panel-container">
     <div class="status-panel-header">
