--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   <h1>🇪🇸 Calendario de Trámites Consulares 🇨🇺</h1>
   <p>Información de plazos y fechas aproximadas al <span id="fecha-actualizacion">Cargando...</span></p>
   <div class="header-action-container">
-      <a href="news.html" class="news-btn" role="button">📰 NOTICIAS DESTACADAS</a>
-  </div>
+    <a href="news.html" class="news-btn-v2" role="button">📰 Noticias Destacadas</a>
+</div>
   </header>
 
 <div id="statusPanel" class="status-panel-container">
