--- a/news.html
+++ b/news.html
@@ -6,7 +6,7 @@
 <title>Noticias Destacadas - Consulado 🇪🇸🇨🇺</title>
 
 <link rel="icon" type="image/x-icon" href="https://img.icons8.com/color/48/000000/spain-flag.png"> 
-<link href="https://fonts.googleapis.com/css2?family=Nunito:wght400;600;700;800;900&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800;900&display=swap" rel="stylesheet">
 
 <link rel="stylesheet" href="styles.css"> 
 <link rel="stylesheet" href="news_styles.css">
@@ -31,7 +31,7 @@
     <section id="bannerCreationSection" class="banner-form-section" style="display: none;">
         <h2>✍️ Crear Nueva Pancarta</h2>
         <input type="text" id="bannerTitle" placeholder="Título de la Noticia (máx. 80 caracteres)" maxlength="80">
-        <textarea id="bannerContent" placeholder="Contenido completo de la Pancarta. Puedes incluir enlaces (se detectarán automáticamente)." rows="8"></textarea>
+        <textarea id="bannerContent" placeholder="Contenido completo de la Pancarta. Puedes incluir enlaces (se detectarán automáticamente)." rows="6"></textarea>
         <div class="form-actions">
             <button id="publishBannerBtn" class="primary-admin-btn">✅ Publicar Pancarta</button>
             <button id="cancelBannerBtn" class="admin-btn secondary-btn">❌ Cancelar</button>
@@ -46,6 +46,8 @@
 <footer>
     <div>© 2025 Consulado – Sección de Noticias.</div>
 </footer>
+
+<script type="module" src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
 <script type="module" src="news_script.js"></script>
 
