--- a/news.html
+++ b/news.html
@@ -20,8 +20,9 @@
     <p>Comunicados oficiales y datos de interés de la comunidad.</p>
     
     <div class="news-admin-controls">
-        <button id="toggleNewsAdminBtn" class="primary-admin-btn">🛡️ MODO EDICIÓN DE NOTICIAS</button>
+        <button id="toggleNewsAdminBtn" class="primary-admin-btn">🛡️ ACTIVAR EDICIÓN</button>
         <div id="newsAdminPanel" style="display: none;">
+            <button id="exitAdminBtn" class="primary-admin-btn">❌ SALIR DEL MODO EDICIÓN</button>
             <button id="addBannerBtn" class="admin-btn">➕ Añadir Nueva Pancarta</button>
         </div>
     </div>
