--- a/news.html
+++ b/news.html
@@ -35,7 +35,7 @@
         <textarea id="bannerContent" placeholder="Contenido completo de la Pancarta. Puedes incluir enlaces (se detectarán automáticamente)." rows="4"></textarea>
         <div class="form-actions">
             <button id="publishBannerBtn" class="primary-admin-btn">✅ Publicar Pancarta</button>
-            <button id="cancelBannerBtn" class="admin-btn secondary-btn">❌ Cancelar</button>
+            <button id="cancelBannerBtn" class="admin-btn">❌ Cancelar</button>
         </div>
     </section>
 
