--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
         <button id="saveBtn" class="admin-btn">💾 Guardar los Cambios</button>
     </div>
     <div class="admin-group">
-        <button id="addNewsBtn" class="admin-btn">✅️ Añadir una Noticia</button> 
-        <button id="deleteNewsBtn" class="admin-btn">⛔️ Eliminar una Noticia</button> 
+        <button id="addNewsBtn" class="admin-btn">✅️ Añadir Noticia al Rodillo</button> 
+        <button id="deleteNewsBtn" class="admin-btn">⛔️ Eliminar una Noticia del Rodillo</button> 
     </div>
     </div>
 </div>
