--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <h1>🇪🇸 Calendario de Trámites Consulares 🇨🇺</h1>
   <p>Información de plazos y fechas aproximadas al <span id="fecha-actualizacion">Cargando...</span></p>
   <div class="header-action-container">
-    <a href="news.html" class="news-btn-v2" role="button">🔴 Noticias Destacadas aquí 👈🏻</a>
+    <a href="news.html" class="news-btn-v2" role="button">🔴 Noticias aquí 👈🏻</a>
 </div>
   </header>
 
