--- a/index.html
+++ b/index.html
@@ -16,11 +16,17 @@
 
 <header>
   <h1>🇪🇸 Calendario de Trámites Consulares 🇨🇺</h1>
+  
+  <div id="viewCounterBox" class="view-counter-box">
+      <span class="view-icon">👁️</span>
+      <span id="viewCount">...</span>
+      <span class="view-text">Visitas en los últimos 7 días</span>
+  </div>
   <p>Información de plazos y fechas aproximadas al <span id="fecha-actualizacion">Cargando...</span></p>
   <div class="header-action-container">
     <a href="news.html" class="news-btn-v2" role="button">🔴 Noticias aquí 👈🏻</a>
 </div>
-  </header>
+</header>
 
 <div id="statusPanel" class="status-panel-container">
     <div class="status-panel-header">
