--- a/index.html
+++ b/index.html
@@ -19,8 +19,12 @@
   <p>Información de plazos y fechas aproximadas al <span id="fecha-actualizacion">Cargando...</span></p>
   <div class="header-action-container">
     <a href="news.html" class="news-btn-v2" role="button">🔴 Noticias aquí 👈🏻</a>
-</div>
-  </header>
+  </div>
+  
+  <div id="viewCounter" class="view-counter" aria-live="polite">
+    </div>
+
+</header>
 
 <div id="statusPanel" class="status-panel-container">
     <div class="status-panel-header">
