--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 
 <header>
   <h1>🇪🇸 Calendario de Trámites Consulares 🇨🇺</h1>
-  <p>Información de plazos y fechas aproximadas al <span id="fecha-actualizacion">Cargando...</span></p>
+  <h1>Web NO OFICIAL - Actualizada por la comunidad de Descendientes </h1>
+  <p><span id="fecha-actualizacion">Cargando...</span></p>
   <div class="header-action-container">
     <a href="news.html" class="news-btn-v2" role="button">🔴 Noticias aquí 👈🏻</a>
   </div>
