--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 
 <header>
   <h1>🇪🇸 Calendario de Trámites Consulares 🇨🇺</h1>
-  <p>Web NO OFICIAL - Actualizada por la comunidad de Descendientes </p>
-  <p><span id="fecha-actualizacion">Cargando...</span></p>
+  <p>Web NO OFICIAL - Actualizada por la comunidad de Descendientes <span id="fecha-actualizacion">Cargando...</span></p>
   <div class="header-action-container">
     <a href="news.html" class="news-btn-v2" role="button">🔴 Noticias aquí 👈🏻</a>
   </div>
@@ -83,7 +82,7 @@
 </section>
 
 <footer>
-  <div>© 2025 Consulado – Información actualizada periódicamente.</div>
+  <div>© 2025 – Información actualizada periódicamente.</div>
 </footer>
 
 <script type="module" src="script.js"></script>
