--- a/index.html
+++ b/index.html
@@ -29,7 +29,13 @@
 <div id="statusPanel" class="status-panel-container">
     <div class="status-panel-header">
         <span>ESTADO ECONÓMICO Y ENERGÉTICO 🚨</span>
-        <span id="lastEditedTime">Última edición: Hace un rato...</span>
+        
+        <div class="live-container">
+            <span class="live-dot"></span>
+            EN VIVO
+        </div>
+        
+        <span id="lastEditedTime" style="display: none;"></span>
     </div>
     <div id="statusDataContainer" class="status-panel-data">
         Cargando datos de estado...
