--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
 <header>
   <h1>🇪🇸 Calendario de Trámites Consulares 🇨🇺</h1>
   <p>Web NO OFICIAL - Actualizada por la comunidad de Descendientes <span id="fecha-actualizacion">Cargando...</span></p>
+  
   <div class="header-action-container">
     <a href="news.html" class="news-btn-v2" role="button">🔴 Noticias aquí 👈🏻</a>
   </div>
   
   <div id="viewCounter" class="view-counter" aria-live="polite">
-    </div>
+    Cargando...
+  </div>
 
 </header>
 
@@ -41,6 +43,7 @@
         Cargando datos de estado...
     </div>
 </div>
+
 <div id="newsTicker" class="news-ticker-container" style="display:none;">
     <strong class="news-ticker-fixed-label">NOTICIAS</strong>
     <div class="news-ticker-wrap">
@@ -56,7 +59,6 @@
   
   <button id="toggleAdminBtn" class="primary-admin-btn">🛡️ ACTIVAR EL MODO EDICIÓN </button>
 
-  
   <div id="adminControlsPanel">
     <div class="admin-group">
         <button id="saveBtn" class="admin-btn">💾 Guardar los Cambios</button>
@@ -65,7 +67,7 @@
         <button id="addNewsBtn" class="admin-btn">✅️ Añadir Noticia al Rodillo</button> 
         <button id="deleteNewsBtn" class="admin-btn">⛔️ Eliminar una Noticia del Rodillo</button> 
     </div>
-    </div>
+  </div>
 </div>
 
 <div class="container" id="contenedor">
