--- a/news.html
+++ b/news.html
@@ -40,7 +40,7 @@
     </section>
 
     <div id="newsBannersContainer" class="banners-list-container">
-        <p style="text-align: center; color: var(--color-texto-secundario); margin: 30px;">Cargando noticias destacadas...</p>
+        <p style="text-align: center; color: white; margin: 30px; font-weight: bold;">Cargando noticias destacadas...</p>
     </div>
 </main>
 
@@ -49,7 +49,6 @@
 </footer>
 
 <script type="module" src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-
 <script type="module" src="news_script.js"></script>
 
 </body>
