--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 <div class="login-controls">
   <div id="statusMessage" class="login-message">
-            Accede a modo edición para actualizar la información
+            Activa modo edición y actualiza la información
   </div>
   
   <button id="toggleAdminBtn" class="btn btn-primary">
