--- a/index.html
+++ b/index.html
@@ -5,10 +5,31 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Calendario Consular La Habana 🇪🇸🇨🇺</title>
 
+<!-- Icono de la pestaña -->
 <link rel="icon" type="image/x-icon" href="https://img.icons8.com/color/48/000000/spain-flag.png"> 
+
+<!-- Fuentes -->
 <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800;900&display=swap" rel="stylesheet">
 
+<!-- Estilos -->
 <link rel="stylesheet" href="styles.css"> 
+
+<!-- 🖼️ META ETIQUETAS PARA REDES SOCIALES (WhatsApp, Facebook, Google) -->
+<meta name="description" content="Estado en tiempo real de trámites consulares, citas, legalizaciones, tasas de cambio y déficit energético en Cuba. Actualizado por la comunidad.">
+
+<!-- Open Graph / Facebook / WhatsApp -->
+<meta property="og:type" content="website">
+<meta property="og:title" content="Calendario Consular La Habana 🇪🇸🇨🇺">
+<meta property="og:description" content="Estado de citas, legalizaciones, Euro/Dólar y déficit. Entra para ver actualizaciones en vivo.">
+<meta property="og:image" content="https://raw.githubusercontent.com/Enviado98/Consulado_Habana/main/social-preview.jpg">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
+
+<!-- Twitter -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Calendario Consular La Habana 🇪🇸🇨🇺">
+<meta name="twitter:description" content="Estado de citas, legalizaciones, Euro/Dólar y déficit. Entra para ver actualizaciones en vivo.">
+<meta name="twitter:image" content="https://raw.githubusercontent.com/Enviado98/Consulado_Habana/main/social-preview.jpg">
 
 <style id="dynamicTickerStyles"></style>
 
