--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Calendario Consular La Habana 🇪🇸🇨🇺</title>
 
-<!-- Icono de la pestaña -->
-<link rel="icon" type="image/x-icon" href="https://img.icons8.com/color/48/000000/spain-flag.png"> 
+<!-- 🟢 ICONOS (FAVICON) - Esto es lo que sale en Google y en la pestaña -->
+<link rel="icon" type="image/png" sizes="96x96" href="https://raw.githubusercontent.com/Enviado98/Consulado_Habana/main/images.png">
+<link rel="apple-touch-icon" href="https://raw.githubusercontent.com/Enviado98/Consulado_Habana/main/images.png">
 
 <!-- Fuentes -->
 <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800;900&display=swap" rel="stylesheet">
