--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 
       <!-- Descripción -->
       <p class="dev-bio">
-          Contáctame para tus proyectos, diseño tu web, tienda, catálogos, bots, etc...<br>
+          Contáctame para tus proyectos, diseño web, tiendas, catálogos, bots, etc...<br>
           <strong></strong>
       </p>
   </div>
