--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 <!-- TICKER -->
 <div id="newsTicker" class="news-ticker-container" style="display:none;">
-  <strong class="news-ticker-fixed-label">NOTICIAS</strong>
+  <strong class="news-ticker-fixed-label">Reportes</strong>
   <div class="news-ticker-wrap">
     <div id="newsTickerContent" class="news-ticker-content"></div>
   </div>
@@ -81,13 +81,13 @@
 <!-- TAB 2: NOTICIAS -->
 <div id="view-noticias" class="tab-view">
   <div class="tab-top-bar">
-    <h2 class="tab-section-title">Noticias</h2>
+    <h2 class="tab-section-title">Reportes</h2>
     <div class="tab-top-actions">
       <button class="glass-add-btn" id="openNewsModalBtn">
         <span class="glass-add-icon">
           <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><line x1="12" y1="5" x2="12" y2="19"/><line x1="5" y1="12" x2="19" y2="12"/></svg>
         </span>
-        <span>Añadir</span>
+        <span>Añadir Reporte</span>
       </button>
       <button class="glass-delete-btn" id="deleteNewsBtn">
         <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="3 6 5 6 21 6"/><path d="M19 6l-1 14H6L5 6"/><path d="M10 11v6M14 11v6"/></svg>
@@ -105,7 +105,7 @@
 <div id="newsModal" class="modal-overlay" style="display:none;" aria-modal="true" role="dialog">
   <div class="modal-glass">
     <div class="modal-header">
-      <span class="modal-title">Nueva Noticia</span>
+      <span class="modal-title">Nuevo Reporte</span>
       <button class="modal-close" id="closeNewsModal" aria-label="Cerrar">
         <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><line x1="18" y1="6" x2="6" y2="18"/><line x1="6" y1="6" x2="18" y2="18"/></svg>
       </button>
@@ -167,7 +167,7 @@
       <span class="ti-sig-arc a2"></span>
       <span class="ti-sig-arc a3"></span>
     </span>
-    <span class="tab-label">Noticias</span>
+    <span class="tab-label">Reportes</span>
   </button>
 
   <button class="tab-btn" data-tab="view-chat">
